--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -15,7 +15,7 @@ isort==5.13.2
 
 # Security Scanning
 bandit==1.7.7
-safety==3.0.1
+# safety removed - conflicts with Pydantic 2.x
 
 # Pre-commit Hooks
 pre-commit==3.6.2
