--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,30 @@
+# Production Dependencies for Retirement Planning DApp
+# Python 3.10+
+
 # Web Framework
 fastapi==0.109.2
 uvicorn[standard]==0.27.1
+
+# Data Validation & Settings
 pydantic==2.6.1
 pydantic-settings==2.1.0
 
-# Financial & Scientific Computing
-numpy==1.26.4
-pandas==2.2.0
-scipy==1.12.0
-numpy-financial==1.0.0
-
-# Data Validation
-python-multipart==0.0.7
-
-# API & Security
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+# Environment Configuration
 python-dotenv==1.0.1
 
-# HTTP Client
+# Authentication & Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==5.0.0
+
+# Financial Calculations
+numpy==1.26.4
+pandas==2.2.0
+numpy-financial==1.0.0
+scipy==1.12.0
+
+# HTTP Client (if needed for external APIs)
 httpx==0.26.0
+
+# File Upload Support
+python-multipart==0.0.7
