--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
+# Core Framework
+fastapi==0.109.2
+pydantic==2.6.1
+pydantic-settings==2.1.0
 
-# Production server
+# ASGI Server
 uvicorn[standard]==0.27.0
 gunicorn==21.2.0
+
+# HTTP Client
+httpx==0.26.0
+
+# Testing
+pytest==8.0.2
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+
+# Development
+python-dotenv==1.0.1
