--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ pytest-mock==3.12.0
 
 # Development
 python-dotenv==1.0.1
+
+# Solana SDK for payment verification
+solders==0.20.0
+base58==2.1.1
