--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,6 @@ python-dotenv==1.0.1
 # Solana SDK for payment verification
 solders==0.20.0
 base58==2.1.1
+
+# Excel File Generation
+openpyxl==3.1.2
