Fix: Exclude tests from Vercel deployment
Tests should not be deployed to production/preview.
Added .vercelignore to skip backend/tests/ directory.

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,15 +1,5 @@
-backend/
-venv/
-*.py
+backend/tests/
 *.pyc
 __pycache__/
 .pytest_cache/
-htmlcov/
-.coverage
-*.egg-info/
 .git/
-.github/
-tests/
-*.md
-requirements.txt
-pyproject.toml
