Fix: Update vercel.json to use rewrites instead of routes
Vercel error: 'routes' cannot be used with 'headers'.
Changed to 'rewrites' (new syntax) which is compatible.

This should fix auto-deploy blocking on develop branch.

--- a/vercel.json
+++ b/vercel.json
@@ -9,19 +9,12 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/index.py"
     }
   ],
-  "env": {
-    "PYTHONPATH": "$PYTHONPATH:."
-  },
   "headers": [
     {
       "source": "/api/(.*)",
@@ -40,5 +33,8 @@
         }
       ]
     }
-  ]
+  ],
+  "env": {
+    "PYTHONPATH": "$PYTHONPATH:."
+  }
 }
